# test-dataplattform-f1

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  .prefectignore  Dockerfile  README.md  dope_config.toml  logging.yaml  prefect.yaml  pyproject.toml
.github/workflows/: dbt.yml  prefect_deploy_non_prod.yml  prefect_deploy_prod.yml  security-review.yml
dbt/: README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/staging/: ssb_arbeidsledige.sql
flows/: hello_dbt.py  hello_snowflake_query.py  hello_world.py
pythoncode/: test.py
